<?xml version="1.0"?>
<package>
  <name>first_control</name>
  <version>0.0.0</version>
  <description>The first_control package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>controller_manager</run_depend>

</package>
