<?xml version="1.0"?>
<package>
  <name>first_gazebo</name>
  <version>0.0.0</version>
  <description>The first_gazebo package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
